# YouTube-Comment-Sentiment-Analysis

./: README.md
youtubecommentanalysis/: function.py  m.py  main.py  main1.py  pyproject.toml
youtubecommentanalysis/static/: st2.css  sty.css
youtubecommentanalysis/templates/: graph.html  index.html
