[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Suhail Khan"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
googletrans = "^3.0.0"
pandas = "^2.1.4"
pytube = "^15.0.0"
google-api-python-client = "^2.111.0"
deep-translator = "^1.11.4"
emoji = "^2.9.0"
bs4 = "^0.0.1"
nltk = "^3.8.1"
matplotlib = "^3.8.2"
flask = "^3.0.0"
function = "^1.2.0"
beautifulsoup4 = "^4.12.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
